infra/k8s/department.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: department-service
spec:
  selector:
    matchLabels:
      app: department-service
  template:
    metadata:
      labels:
        app: department-service
    spec:
      containers:
        - name: department-service
          image: sidiik/department-service-app
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
          ports:
            - containerPort: 4001

---
apiVersion: v1
kind: Service
metadata:
  name: department-service
spec:
  selector:
    app: department-service
  ports:
    - port: 4001
      targetPort: 4001
