infra/k8s/shift-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shift-service-app
spec:
  selector:
    matchLabels:
      app: shift-service-app
  template:
    metadata:
      labels:
        app: shift-service-app
    spec:
      containers:
        - name: shift-service-app
          image: sidiik/shift-service-app
          ports:
            - containerPort: 4002

---
apiVersion: v1
kind: Service
metadata:
  name: shift-service-app
spec:
  selector:
    app: shift-service-app
  ports:
    - port: 4002
      targetPort: 4002
