infra/k8s/users-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service-app
spec:
  selector:
    matchLabels:
      app: users-service-app
  template:
    metadata:
      labels:
        app: users-service-app
    spec:
      containers:
        - name: users-service-app
          image: sidiik/users-service-app
          ports:
            - containerPort: 4000

---
apiVersion: v1
kind: Service
metadata:
  name: users-service-app
spec:
  selector:
    app: users-service-app
  ports:
    - port: 80
      targetPort: 4000
