infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  labels:
    name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: my-app.org
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: users-service-app
                port:
                  number: 4000
